--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ Learning Centre
 	      </ul>
 
 </p>
-<a class="btn btn-primary btn-block rounded-pill text-center" href="">Link</a>
+<a class="btn btn-primary rounded-pill text-center" href="" style="background-color: ec407a; color: #fff;">Link</a>
 </div>
 	    </div>
           </div>
@@ -293,7 +293,7 @@ Learning Centre
 	      </ul>
 
 </p>
-<a class="btn btn-primary btn-block rounded-pill text-center" href="">Link</a>
+<a class="btn btn-primary rounded-pill text-center" href="" style="background-color: ec407a; color: #fff;">Link</a>
 </div>
 
            </div>
@@ -338,7 +338,7 @@ Hobby Centre
 	      </ul>
 
 </p>
-<a class="btn btn-primary btn-block rounded-pill text-center" href="">Link</a>
+<a class="btn btn-primary rounded-pill text-center" href="" style="background-color: ec407a; color: #fff;">Link</a>
 </div>
 
             </div>
